fix gap on mobile banner

--- a/src/entities/Social/ui/Banners/Banners.module.pcss
+++ b/src/entities/Social/ui/Banners/Banners.module.pcss
@@ -99,7 +99,7 @@
 				align-items: flex-start !important;
 				justify-content: flex-start !important;
 				flex-direction: column !important;
-				gap: var(--space-xxs);
+				gap: var(--space-xxs) !important;
 				.title {
 					text-align: left;
 				}
